# contact_form_gcs

./: main.py  pyproject.toml
utils/: gcs_read.py  gcs_write.py  tinydb_write.py
views/: ai-agents.tpl  base.tpl  cloud.tpl  contact.tpl  dev-ops.tpl  index.tpl  privacy-policy.tpl
